<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:background="@color/black"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/txtBrowse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/gibson_medium"
            android:layout_marginStart="20dp"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:text="@string/browse"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/txtBrowse"
            app:layout_constraintBottom_toBottomOf="@id/txtBrowse"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:src="@drawable/more"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moves"
            android:textSize="12sp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/gibson_regular"
            app:layout_constraintStart_toStartOf="@id/txtBrowse"
            app:layout_constraintTop_toBottomOf="@id/txtBrowse"
            android:textColor="@color/white"/>

        <include
            android:id="@+id/searchBar"
            app:layout_constraintTop_toBottomOf="@id/txtBrowse"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/searchbar"/>

        <TextView
            android:id="@+id/errorTxt"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_search_results_found"
            android:textColor="@color/white"
            android:fontFamily="@font/gibson_regular"
            app:layout_constraintTop_toBottomOf="@id/searchBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"/>

        <include
            android:id="@+id/homeShimmer"
            layout="@layout/home_shimmer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/searchBar" />

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/refreshLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/searchBar">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/moviesRecycler"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="10dp"
                android:paddingTop="10dp"
                android:paddingStart="12dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>